# afrikalytics-api

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Procfile  README.md  alembic.ini  auth.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.claude/agents/: api-architect.md  devops-engineer.md  doc-writer.md  module-extractor.md  qa-tester.md  security-auditor.md  test-writer.md
.claude/commands/: add-endpoint.md  audit.md  deploy-check.md  refactor-module.md  security-check.md
.githooks/: commit-msg  pre-commit
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 002_add_indexes_constraints_defaults.py  003_migrate_text_to_jsonb.py  004_add_soft_delete.py  005_add_payment_table_and_unique_subscription.py  006_add_rls_policies.py  007_add_study_import_columns.py  008_add_notification_and_sso_columns.py  012_fix_rls_policies.py  013_jwt_rs256_token_rotation.py  014_add_composite_indexes.py  015_dashboard_layouts.py  2026_03_14_001_initial_schema.py  2026_03_15_009_fix_critical_integrity.py  2026_03_15_010_security_hardening.py  (+1 more)
app/: auth.py  config.py  database.py  dependencies.py  models.py  pagination.py  permissions.py  rate_limit.py  security.py  utils.py
docs/: audit-backend-2026-03-15.md  audit-complet-2026-03-15.md  audit-database-rapport.md
tests/: conftest.py  test_admin.py  test_admin_extended.py  test_analytics.py  test_auth.py  test_auth_core.py  test_auth_extended.py  test_auth_rs256.py  test_auth_security.py  test_auth_sso.py  test_blog.py  test_contacts.py  test_dashboard.py  test_enterprise.py  test_insights.py  test_insights_rbac_extended.py  test_integrations.py  test_isolation.py  test_newsletter.py  test_notifications.py  test_payments.py  test_payments_extended.py  test_payments_webhook.py  test_rate_limiting.py  test_rbac.py  test_reports.py  test_reports_rbac_extended.py  test_services_unit.py  test_studies.py  test_studies_crud.py  test_studies_import.py  test_studies_pagination.py  test_users.py  test_users_extended.py  test_validation.py
(+53 files in other folders)
